name:                hyperreactive-banana
version:             0.1.0.0
synopsis:            Generalization of Reactive Banana FRP (Functional Reactive Programming) library to standardized Hyperreactive interface
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Stephen Blackheath
maintainer:          docks.cattlemen.stephen@blacksapphire.com
-- copyright:           
category:            FRP
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Reactive.Hyper.Banana
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.6 && <4.8,
                       hyperreactive == 0.1.*,
                       reactive-banana == 0.8.*
  -- hs-source-dirs:      
  default-language:    Haskell2010

