name:                hyperreactive-sodium
version:             0.1.0.0
synopsis:            Generalization of Sodium FRP (Functional Reactive Programming) library to standardized Hyperreactive interface
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Stephen Blackheath
maintainer:          docks.cattlemen.stephen@blacksapphire.com
-- copyright:           
category:            FRP
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Reactive.Hyper.Sodium
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.6 && <4.8,
                       hyperreactive == 0.1.*,
                       sodium == 0.10.*
  -- hs-source-dirs:      
  default-language:    Haskell2010

